--- a/publiccms-parent/publiccms-oauth/build.gradle
+++ b/publiccms-parent/publiccms-oauth/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
 	compile project(':publiccms-core')
-	providedCompile(
+	compile(
         // http://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
         "javax.servlet:javax.servlet-api:3.1.0"
     )
