--- a/publiccms-parent/pom.xml
+++ b/publiccms-parent/pom.xml
@@ -16,7 +16,10 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- http://mvnrepository.com/artifact/org.springframework/spring-core -->
 		<!-- http://projects.spring.io/spring-framework/ -->
-		<version.spring>4.3.9.RELEASE</version.spring>
+		<version.spring>4.3.12.RELEASE</version.spring>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
+		<!-- https://projects.spring.io/spring-boot/ -->
+		<version.springBoot>1.5.8.RELEASE</version.springBoot>
 		<!-- http://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
 		<!-- http://hc.apache.org/downloads.cgi -->
 		<version.httpclient>4.5.3</version.httpclient>
@@ -24,16 +27,16 @@
 		<version.jackson>2.8.9</version.jackson>
 		<!-- http://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 		<!-- http://hibernate.org/orm/downloads/ -->
-		<version.hibernate>5.1.8.Final</version.hibernate>
-		<!-- http://mvnrepository.com/artifact/org.hibernate/hibernate-search -->
+		<version.hibernate>5.1.10.Final</version.hibernate>
+		<!-- http://mvnrepository.com/artifact/org.hibernate/hibernate-search-orm -->
 		<!-- http://hibernate.org/search/downloads/ -->
-		<version.hibernateSearch>5.6.2.Final</version.hibernateSearch>
+		<version.hibernateSearch>5.6.4.Final</version.hibernateSearch>
 		<!-- http://mvnrepository.com/artifact/org.freemarker/freemarker -->
 		<version.freemarker>2.3.26-incubating</version.freemarker>
 		<!-- http://mvnrepository.com/artifact/org.mybatis/mybatis -->
-		<version.mybatis>3.4.4</version.mybatis>
+		<version.mybatis>3.4.5</version.mybatis>
 		<!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-analyzers-smartcn -->
-		<version.lucene>5.5.4</version.lucene>
+		<version.lucene>5.5.5</version.lucene>
 		<!-- http://mvnrepository.com/artifact/redis.clients/jedis -->
 		<version.jedis>2.9.0</version.jedis>
 		<!-- http://mvnrepository.com/artifact/org.quartz-scheduler/quartz -->
@@ -235,17 +238,21 @@
 				<artifactId>mybatis-generator-core</artifactId>
 				<version>1.3.5</version>
 			</dependency>
-			<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-web</artifactId>
-				<version>1.5.4.RELEASE</version>
+				<version>${version.springBoot}</version>
 				<exclusions>
 					<exclusion>
 						<groupId>org.springframework.boot</groupId>
 						<artifactId>spring-boot-starter-logging</artifactId>
 					</exclusion>
 				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-devtools</artifactId>
+				<version>${version.springBoot}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
