--- a/publiccms-parent/publiccms/src/main/resources/cms.properties
+++ b/publiccms-parent/publiccms/src/main/resources/cms.properties
@@ -1,7 +1,8 @@
 #System property will override the following parameters.(-D<name>=<value> set a system property)
-cms.filePath=/data/publiccms
+cms.filePath=E:\\eclipse\\publiccms-doc\\data\\publiccms
 cms.masterSiteIds=1
 cms.defaultSiteId=1
+cms.defaultLocale=zh_CN
 cms.tokenizerFactory=hmmchinese
 cms.task.threadCount=3
 cms.multipart.maxUploadSize=100
