--- a/publiccms-parent/pom.xml
+++ b/publiccms-parent/pom.xml
@@ -4,35 +4,35 @@
 	<groupId>com.publiccms</groupId>
 	<artifactId>publiccms-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>V4.0.20170812</version>
+	<version>V4.0.20180210</version>
 	<modules>
-        <module>publiccms-oauth</module>
-        <module>publiccms-redis</module>
-        <module>publiccms</module>
-        <module>publiccms-core</module>
-        <module>publiccms-common</module>
-    </modules>
+		<module>publiccms-oauth</module>
+		<module>publiccms-redis</module>
+		<module>publiccms</module>
+		<module>publiccms-core</module>
+		<module>publiccms-common</module>
+	</modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- http://mvnrepository.com/artifact/org.springframework/spring-core -->
 		<!-- http://projects.spring.io/spring-framework/ -->
-		<version.spring>4.3.13.RELEASE</version.spring>
+		<version.spring>4.3.14.RELEASE</version.spring>
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
 		<!-- https://projects.spring.io/spring-boot/ -->
-		<version.springBoot>1.5.9.RELEASE</version.springBoot>
+		<version.springBoot>1.5.10.RELEASE</version.springBoot>
 		<!-- http://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
 		<!-- http://hc.apache.org/downloads.cgi -->
-		<version.httpclient>4.5.4</version.httpclient>
+		<version.httpclient>4.5.5</version.httpclient>
 		<!-- http://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
-		<version.jackson>2.8.10</version.jackson>
+		<version.jackson>2.8.11</version.jackson>
 		<!-- http://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 		<!-- http://hibernate.org/orm/downloads/ -->
-		<version.hibernate>5.1.10.Final</version.hibernate>
+		<version.hibernate>5.1.12.Final</version.hibernate>
 		<!-- http://mvnrepository.com/artifact/org.hibernate/hibernate-search-orm -->
 		<!-- http://hibernate.org/search/downloads/ -->
 		<version.hibernateSearch>5.6.4.Final</version.hibernateSearch>
 		<!-- http://mvnrepository.com/artifact/org.freemarker/freemarker -->
-		<version.freemarker>2.3.26-incubating</version.freemarker>
+		<version.freemarker>2.3.27-incubating</version.freemarker>
 		<!-- http://mvnrepository.com/artifact/org.mybatis/mybatis -->
 		<version.mybatis>3.4.5</version.mybatis>
 		<!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-analyzers-smartcn -->
@@ -50,7 +50,7 @@
 			<dependency>
 				<groupId>cglib</groupId>
 				<artifactId>cglib-nodep</artifactId>
-				<version>3.2.5</version>
+				<version>3.2.6</version>
 			</dependency>
 			<!-- http://mvnrepository.com/artifact/commons-io/commons-io -->
 			<dependency>
@@ -196,7 +196,7 @@
 			<dependency>
 				<groupId>eu.bitwalker</groupId>
 				<artifactId>UserAgentUtils</artifactId>
-				<version>1.20</version>
+				<version>1.21</version>
 			</dependency>
 			<!-- http://mvnrepository.com/artifact/net.coobird/thumbnailator -->
 			<dependency>
@@ -236,7 +236,7 @@
 			<dependency>
 				<groupId>org.mybatis.generator</groupId>
 				<artifactId>mybatis-generator-core</artifactId>
-				<version>1.3.5</version>
+				<version>1.3.6</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
@@ -276,16 +276,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>1.5.4.RELEASE</version>
-			</plugin>
-			<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-maven-plugin -->
-			<plugin>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.2.21.v20170120</version>
-				<configuration>
-		          <war>publiccms/target/publiccms.war</war>
-		        </configuration>
+				<version>${version.springBoot}</version>
 			</plugin>
 			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
 			<plugin>
