--- a/publiccms-parent/publiccms/build.gradle
+++ b/publiccms-parent/publiccms/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: "war"
-apply plugin: 'org.springframework.boot'
+//apply plugin: 'org.springframework.boot'
 
 group = 'com.publiccms'
 
@@ -14,7 +14,7 @@ dependencies {
     )
     providedCompile(
         // http://mvnrepository.com/artifact/org.mybatis.generator/mybatis-generator-core
-        "org.mybatis.generator:mybatis-generator-core:1.3.5",
+        "org.mybatis.generator:mybatis-generator-core:1.3.6",
         // http://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
         "javax.servlet:javax.servlet-api:3.1.0"
     )
@@ -22,6 +22,7 @@ dependencies {
         "org.springframework.boot:spring-boot-starter-web:${springBootVersion}") {
         exclude group:"org.springframework.boot", module: 'spring-boot-starter-logging'
     }
+    compile("org.springframework.boot:spring-boot-devtools:${springBootVersion}")
     compile fileTree(dir: 'src/main/webapp/WEB-INF/lib', include: ['*.jar'])
 }
 war{
