--- a/publiccms-parent/pom.xml
+++ b/publiccms-parent/pom.xml
@@ -189,8 +189,8 @@
 			<!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
 			<dependency>
 			    <groupId>javax.mail</groupId>
-			    <artifactId>javax.mail-api</artifactId>
-			    <version>1.6.1</version>
+			    <artifactId>mail</artifactId>
+			    <version>1.4.7</version>
 			</dependency>
 			<!-- http://mvnrepository.com/artifact/eu.bitwalker/UserAgentUtils -->
 			<dependency>
